--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,57 +1,89 @@
+@font-face {
+  font-family: "Instagram Sans"; /* Name you'll use in CSS */
+  src: url("../fonts/Instagram\ Sans.woff") format("woff2"),
+       url("../fonts/Instagram\ Sans\ Bold.woff") format("woff"),
+       url("../fonts/Instagram\ Sans\ Headline.woff") format("woff"),
+       url("../fonts/Instagram\ Sans\ Light.woff") format("woff"),
+       url("../fonts/Instagram\ Sans\ Medium.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   height: 100vh;
   background-color: #fafafa;
-  font-family: Arial, sans-serif;
+  font-family: "Instagram Sans", Arial, sans-serif;
+  font-weight: lighter;
 }
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0;
+  padding-top: 0;
+  width: 100%;
 }
 .login-box {
   background: #fff;
-  padding: 20px;
+  padding: 20px 40px;
   border: 1px solid #dbdbdb;
   text-align: center;
   width: 300px;
+  /* max-width: 500px; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .logo {
   width: 150px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 input {
-  width: 100%;
-  border: 0;
+  /* width: 100%; */
+  border: none;
   outline: none;
   overflow: hidden;
-  padding: 9px 0px 7px 8px;
+  padding: 0;
   text-overflow: ellipsis;
-  margin: 5px 0;
-  border: 1px solid #dbdbdb;
   border-radius: 3px;
+  background: transparent;
 }
 .password-container {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: row;
   justify-content: stretch;
   position: relative;
 }
 
-.password-container input {
+.input-container {
+  margin-bottom: 5px;
+}
+
+.input-container-pwd,
+.input-container {
+  display: flex;
+  background: #fafafa;
   width: 100%;
+  position: relative;
+  border-radius: 3px;
+  padding: 12px 10px 8px 10px;
+  border: 1px solid #dbdbdb;
+}
+
+#password {
+  /* width: 129%; */
+  margin: 0;
 }
 #toggle-password {
   position: absolute;
-  right: 0px;
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
+  font-size: .7rem;
   cursor: pointer;
 }
 button {
@@ -62,19 +94,16 @@ button {
   color: #fff;
   font-weight: bold;
   cursor: pointer;
-  border-radius: 3px;
+  border-radius: 8px;
   margin-top: 10px;
 }
 button:disabled {
-  background: #b2dffc;
+  background: #4cb5f9;
   cursor: not-allowed;
 }
 .error-message {
   color: red;
   font-size: 14px;
-  margin-top: 10px;
-}
-.forgot-password {
   margin-top: 10px;
 }
 
@@ -91,6 +120,81 @@ button:disabled {
 #login-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
+  width: 100%;
+}
+
+
+label {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  font-size: .7rem;
+  color: #8f8f8f;
+  transition: all 0.3s ease;
+  pointer-events: none;
+}
+
+input:focus + label,
+input:not(:placeholder-shown) + label {
+  left: 5px;
+  top: 8px;
+  font-size: .6rem;
+  color: #8f8f8f;
+  /* background: white; */
+  padding: 0 5px;
+}
+
+.divider {
+  margin: 20px 0;
+  width: 100%;
+  height: 1px;
+  position: relative;
+  background: #dbdbdb;
+}
+
+.divider span {
+  position: absolute;
+  font-size: .8rem;
+  top: -12px;
+  left: 50%;
+  width: 50px;
+  transform: translateX(-50%);
+  padding: 5px;
+  background: white;
+  border-radius: 50%;
+}
+
+.fb-login {
+  font-weight: 500;
   width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #0095f6;
+}
+
+.fb-login img {
+  width: 25px;
+  margin-right: 10px;
+}
+
+.forgot-password {
+  margin-top: 10px;
+}
+
+.forgot-password a {
+  text-decoration: none;
+  color: rgb(53, 53, 53);
+}
+
+.signup-box  {
+  margin-top: 15px;
+  padding: 20px 40px;
+}
+
+.signup-box span{
+  color: #0095f6;
+  font-weight: 600;
 }
