--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,8 +15,9 @@ body {
   /* align-items: center; */
   height: 100vh;
   background-color: #fafafa;
-  font-family: "Instagram Sans", Arial, sans-serif;
-  font-weight: lighter;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, "Instagram Sans", Arial, sans-serif;
+  /* font-weight: lighter; */
+  font-size: 14px;
 }
 .container {
   display: flex;
@@ -28,10 +29,10 @@ body {
 }
 .login-box {
   background: #fff;
-  padding: 20px 40px;
+  padding: 10px 0;
   border: 1px solid #dbdbdb;
   text-align: center;
-  width: 300px;
+  width: 350px;
   /* max-width: 500px; */
   display: flex;
   flex-direction: column;
@@ -39,7 +40,7 @@ body {
 }
 .logo {
   width: 150px;
-  margin-bottom: 40px;
+  margin: 40px 0;
 }
 input {
   /* width: 100%; */
@@ -84,6 +85,7 @@ input {
   top: 50%;
   transform: translateY(-50%);
   font-size: .7rem;
+  display: none;
   cursor: pointer;
 }
 button {
@@ -121,7 +123,7 @@ button:disabled {
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  width: 100%;
+  width: 80%;
 }
 
 
@@ -148,7 +150,7 @@ input:not(:placeholder-shown) + label {
 
 .divider {
   margin: 20px 0;
-  width: 100%;
+  width: 80%;
   height: 1px;
   position: relative;
   background: #dbdbdb;
@@ -190,11 +192,57 @@ input:not(:placeholder-shown) + label {
 }
 
 .signup-box  {
-  margin-top: 15px;
-  padding: 20px 40px;
+  margin-top: 10px;
+  padding: 10px 0;
 }
 
 .signup-box span{
   color: #0095f6;
   font-weight: 600;
+}
+
+.get-the-app {
+  text-align: center;
+}
+
+.app-buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.app-buttons img {
+  width: 130px;
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+footer {
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #737373;
+  font-size: 12px;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px 0;
+  gap: 10px;
+}
+
+.footer-links a {
+  text-decoration: none;
+  color: #737373;
+}
+
+footer p {
+  margin-bottom: 50px;
 }
