--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,21 +10,24 @@
 }
 
 body {
+  /* padding-top: 10px; */
   display: flex;
+  flex-direction: column;
   justify-content: center;
   /* align-items: center; */
-  height: 100vh;
-  background-color: #fafafa;
+  /* height: 100vh; */
+  background-color: #ffffff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, "Instagram Sans", Arial, sans-serif;
   /* font-weight: lighter; */
   font-size: 14px;
 }
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 0;
-  padding-top: 0;
+  padding-top: 10px;
   width: 100%;
 }
 .login-box {
@@ -202,6 +205,7 @@ input:not(:placeholder-shown) + label {
 }
 
 .get-the-app {
+  margin-top: 20px;
   text-align: center;
 }
 
@@ -245,4 +249,10 @@ footer {
 
 footer p {
   margin-bottom: 50px;
+}
+
+@media (max-width: 450px) {
+  .login-box {
+      border: none;
+  }
 }
