--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,10 +301,16 @@ footer p {
     background: #0069ad;
   }
 
-
+  .fb-login {
+    color: #0095f6;
+  }
   .login-box {
       border: none;
     }
+
+  .forgot-password a {
+    color: rgb(255, 255, 255);
+  }
   /* @media (max-width: 450px) {
     .login-box {
       border: none;
