--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,6 +111,7 @@ button:disabled {
   color: red;
   font-size: 14px;
   margin-top: 10px;
+  width: 80%;
 }
 
 .logo {
@@ -272,7 +273,7 @@ footer p {
 
   .divider {
     border: transparent;
-    background: transparent;
+    background: #6d6b6b;
   }
 
   input {
@@ -282,7 +283,7 @@ footer p {
   .input-container,
   .input-container-pwd{
     background: rgba(0, 0, 0, .6);
-    border-color: rgb(85, 85, 85);
+    border-color: rgb(126, 126, 126);
   }
 
   .logo {
@@ -305,9 +306,13 @@ footer p {
   .fb-login {
     color: #0095f6;
   }
-  .login-box {
-      border: none;
+  .login-box
+ {
+      border-color: #6d6b6b;
     }
+  #signup-box {
+    margin-top: 30px;
+  }
 
   .forgot-password a {
     color: rgb(255, 255, 255);
