--- a/styles/reset.css
+++ b/styles/reset.css
@@ -302,6 +302,12 @@
     margin-bottom: 50px;
   }
 
+  .reset-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   @media (max-width: 768px) {
     .login-box {
         border: none;
